2B. Click on options on Navigation Panel opens relevant empty Main Panel / 3B. Create Limits / Limits Upload Tab html